# enterprise-task-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  orchestrator.py  planner.py  schemas.py
app/api/: __init__.py  routes.py
app/auth/: __init__.py  entra.py  identity.py  routes.py  session_store.py
app/connectors/: __init__.py  graph.py
app/core/: __init__.py  audit.py  db.py  logging_config.py  middleware.py  rbac.py  store.py
app/tools/: __init__.py  approval.py  base.py  dates.py  desk_booking.py  it_request.py  leave_request.py  timesheet.py
docs/: ARCHITECTURE.md  AUTH_SETUP.md  CONNECTORS.md  DEMO_SCRIPT.md  DEPLOYMENT.md
frontend/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_orchestrator.py  test_planner.py  test_production.py  test_tools.py
