[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-task-agent"
version = "0.1.0"
description = "Role-aware agentic AI that turns plain-language requests into completed enterprise tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]
