[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-task-agent"
version = "1.0.0"
description = "Role-aware agentic AI that turns plain-language requests into completed enterprise tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "data"]

[tool.ruff.lint]
# Conservative, high-signal rule set: pyflakes, pycodestyle, import sorting,
# pyupgrade and a few bugbear checks.
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Query) in defaults.

